c/libiio.h

/* Linux Industrial I/O services */

// Copyright (C)2025, Philip Munts dba Munts Technologies.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
//
// * Redistributions of source code must retain the above copyright notice,
//   this list of conditions and the following disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
// IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
// ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
// LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
// CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
// SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
// INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
// CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
// POSSIBILITY OF SUCH DAMAGE.

#ifndef LIBIIO_H
#define LIBIIO_H

#include <libsimpleio/cplusplus.h>

void IIO_get_name(int32_t chip, char *name, int32_t namesize, int32_t *error);

void IIO_get_vref(int32_t chip, double *reference, int32_t *error);

void IIO_open(int32_t chip, int32_t channel, const char *property,
  const char *suffix, mode_t mode, int32_t *fd, int32_t *error);

void IIO_get_double(int32_t fd, double *item, int32_t *error);

void IIO_get_int(int32_t fd, int32_t *item, int32_t *error);

void IIO_put_int(int32_t fd, int32_t item, int32_t *error);

void IIO_close(int32_t fd, int32_t *error);

_END_STD_C

#endif